# roulette_bot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/drafts/: notes.md
docs/guides/: bot-architecture.md  external-service-setup.md  flow-controller.md  template-management.md
docs/plans/: roadmap.md
docs/references/: discord_bot_requirements.md  module-overview.md  test-suite.md
docs/standards/: architecture.md  documentation.md
roulette_ds_bot/src/: data_interface.py  data_process.py  db_manager.py  main.py  utils.py  view.py  view_manager.py
src/: data_interface.py  data_process.py  db_manager.py  health_check.py  main.py  utils.py  view_manager.py
src/app/: __init__.py  config.py  container.py  logging.py
src/application/: __init__.py  dto.py
src/bootstrap/: __init__.py  app.py  testing.py
src/bot/: __init__.py  client.py  commands.py  config.py
src/components/: button.py  mixins.py  modal.py  select.py
src/data_type/: context_result_types.py
src/data_types/: context_result_types.py
src/db/: __init__.py  constants.py  repositories.py  serializers.py
src/domain/: __init__.py  value_objects.py
src/flow/: actions.py  handlers.py  registry.py
src/model/: context_model.py  model.py  state_model.py
src/models/: context_model.py  model.py  state_model.py
src/services/: app_context.py  startup_check.py
src/view/: view.py
src/views/: __init__.py  embed_mode.py  history_list.py  search_utils.py  selection_mode.py  template_list.py  template_management.py  template_sharing.py  view.py
test/unittest/: test_data_process.py
tests/: test_application_bootstrap.py  test_command_context.py  test_data_process.py  test_db_manager.py  test_firestore_template_repository.py  test_flow_actions.py  test_flow_controller.py  test_flow_handlers.py  test_flow_registry.py  test_history_list_view.py  test_member_select.py
(+42 files in other folders)
