[tool.poetry]
name = "roulette-ds-bot"
version = "0.1.0"
description = ""
authors = ["penne <penne0505pp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
discord-py = "^2.4.0"
firebase-admin = "^6.6.0"


[[tool.poetry.packages]]
include = "src"


[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.25.3"
python-dotenv = "^1.0.1"
colorama = "^0.4.6"
psutil = "^6.1.1"


[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
