[tool.poetry]
name = "roulette-ds-bot"
version = "0.1.0"
description = "Discord bot that manages amidakuji templates and assignments."
authors = ["penne <penne0505pp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
discord-py = "^2.4.0"
firebase-admin = "^6.6.0"
psutil = "^6.1.1"
colorama = "^0.4.6"
fastapi = "^0.111.0"  # 追加
uvicorn = {extras = ["standard"], version = "^0.30.1"} # 追加
python-dotenv = "^1.1.1"
injector = "^0.21.0"


[[tool.poetry.packages]]
include = "src"


[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.25.3"


[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
